--- a/BLAZAMGui/UI/Settings/DirectorySettings.razor
+++ b/BLAZAMGui/UI/Settings/DirectorySettings.razor
@@ -110,7 +110,10 @@
 
                 <SettingsField Label="@AppLocalization["UseTLS"]">
 
-                    <MudSwitch For="(()=>settings.UseTLS)" Label="@AppLocalization["UseTLS"]" @bind-Value="@settings.UseTLS" />
+                    <MudSwitch For="(()=>settings.UseTLS)"
+                               Color="Color.Success"
+                               Label="@AppLocalization["UseTLS"]"
+                               @bind-Value="@settings.UseTLS" />
 
                 </SettingsField>
 
@@ -118,7 +121,10 @@
 
                 <SettingsField Label="@AppLocalization["FQDN"]">
 
-                    <MudTextField For="(()=>settings.FQDN)" Label="@AppLocalization["FQDN"]" name="fqdn" @bind-Value="@settings.FQDN" />
+                    <MudTextField For="(()=>settings.FQDN)"
+                                  Label="@AppLocalization["FQDN"]"
+                                  name="fqdn"
+                                  @bind-Value="@settings.FQDN" />
 
                 </SettingsField>
 
