--- a/BLAZAMGui/UI/Settings/Permissions/DelegateListItem.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/DelegateListItem.razor
@@ -8,9 +8,11 @@
             </MudText>
 
             <MudSwitch T=bool
-                Label="Super User Group"
-                 Value="Delegate.IsSuperAdmin"
-                 Disabled=true />
+                       UncheckedColor="Color.Error"
+                       Color="Color.Success"
+                       Label="Super User Group"
+                       Value="Delegate.IsSuperAdmin"
+                       Disabled=true />
         </MudStack>
 
 
@@ -31,6 +33,8 @@
 
 
             <MudSwitch T=bool
+                       UncheckedColor="Color.Error"
+                       Color="Color.Success"
                        Label="Super User Group"
                        Disabled=@(ApplicationInfo.InDebugMode && UserStateService.CurrentUsername !="admin")
                        @bind-Value="Delegate.IsSuperAdmin" />
@@ -39,8 +43,8 @@
 
 
 
-           @*  <MudButton Variant="Variant.Outlined"
-                       Color="Color.Info">@AppLocalization["Show All Members"]</MudButton> *@
+            @*  <MudButton Variant="Variant.Outlined"
+            Color="Color.Info">@AppLocalization["Show All Members"]</MudButton> *@
             <MudButton Variant="Variant.Outlined"
                        @onclick="Save"
                        Color="Color.Success">@AppLocalization["Save Changes"]</MudButton>
