--- a/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
@@ -14,7 +14,10 @@
     <MudTextField Immediate=true Validation="@(newPasswordConfirm.Equals(newPassword))" Label="@AppLocalization["Confirm New Password"]" InputType="InputType.Password" @bind-Value="@newPasswordConfirm" />
 
     <MudTooltip Text=@AppLocalization["Require the user to change their password at next logon"]>
-        <MudSwitch T="bool" @ref=requireChangeSwitch>@AppLocalization["Require change"]</MudSwitch>
+        <MudSwitch T="bool"
+                   UncheckedColor="Color.Error"
+                   Color="Color.Success"
+                   @ref=requireChangeSwitch>@AppLocalization["Require change"]</MudSwitch>
     </MudTooltip>
 
 </MudContainer>
