--- a/BLAZAMGui/UI/Dashboard/Widgets/Widget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/Widget.razor
@@ -5,6 +5,7 @@
     public RenderFragment? WidgetContent { get; set; }
     public string Title{ get; set; }
     public DashboardWidgetType WidgetType{ get; set; }
+    public int ItemsPerPage { get; set; } = 5;
 
     protected virtual void RowClicked(DataGridRowClickEventArgs<IDirectoryEntryAdapter> args)
     {
