--- a/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
@@ -7,7 +7,8 @@
              RowClass="cursor-pointer"
              Dense=true
              Filterable=true
-             RowsPerPage="5"
+             RowsPerPage="@ItemsPerPage"
+             RowsPerPageChanged="@SetRowsPerPage"
              FilterMode="DataGridFilterMode.Simple"
              Loading=@LoadingData
              Square=true
@@ -39,27 +40,6 @@
 <MudOverlay Visible=LoadingData>
     <MudProgressLinear Indeterminate=true />
 </MudOverlay>
-@* <div Background="Background.Secondary" >
-
-
-    <div Overflow="Overflow.Auto" Style="max-height:350px;">
-        @foreach (var user in LockedUsers)
-        {
-
-            <MudCard @onclick="@(()=>{Nav.NavigateTo(user.SearchUri);})">
-
-
-                @user.DisplayName <br>
-                @user.SamAccountName <br>
-                @DirectoryTools.PrettifyOu(user.OU) <br>
-
-                @user.PasswordLastSet <br>
-
-            </MudCard>
-
-        }
-    </div>
-</div> *@
 @code {
     List<IADUser> LockedUsers = new();
 
