--- a/BLAZAMGui/UI/Dashboard/Widgets/NewPrintersWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/NewPrintersWidget.razor
@@ -1,6 +1,11 @@
 ﻿@inherits Widget
 @attribute [Authorize]
-<NewEntriesWidgetDataGrid Items="@NewPrinters" RowClick=@GoTo T="IADPrinter" Loading=LoadingData />
+<NewEntriesWidgetDataGrid Items="@NewPrinters"
+                          RowClick=@GoTo
+                          RowsPerPage="@ItemsPerPage"
+                          RowsPerPageChanged="@SetRowsPerPage"
+                          T="IADPrinter"
+                          Loading=LoadingData />
 
 @code {
     List<IADPrinter> NewPrinters
