Performance improvements to user preference saving

--- a/BLAZAMGui/Layouts/AppUserButton.razor
+++ b/BLAZAMGui/Layouts/AppUserButton.razor
@@ -93,7 +93,7 @@
         UserState = CurrentUser.State;
         Notifications = UserState.Notifications;
         if (UserState != null)
-            UserState.OnSettingsChanged += (settings) =>
+            UserState.OnSettingsChanged += () =>
             {
                 InvokeAsync(StateHasChanged);
             };
