--- a/BLAZAMGui/UI/Outputs/ApplicationNewsProvider.razor
+++ b/BLAZAMGui/UI/Outputs/ApplicationNewsProvider.razor
@@ -134,7 +134,7 @@
 
             }
         }
-        await CurrentUser.State.SaveUserSettings();
+        await CurrentUser.State.SaveReadNewsItems();
         RefreshItems();
         await InvokeAsync(StateHasChanged);
 
