--- a/BLAZAMGui/UI/Dashboard/Widgets/Widget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/Widget.razor
@@ -3,11 +3,13 @@
 @code {
     [Parameter]
     public RenderFragment? WidgetContent { get; set; }
-    public string Title{ get; set; }
+    public string Title { get; set; }
     [Parameter]
-    public DashboardWidgetType WidgetType{ get; set; }
+    public DashboardWidgetType WidgetType { get; set; }
     [Parameter]
     public int ItemsPerPage { get; set; } = 5;
+    [CascadingParameter]
+    public CurrentUserDashboardWidgets CurrentUserDashboardWidgets { get; set; }
 
     protected virtual void RowClicked(DataGridRowClickEventArgs<IDirectoryEntryAdapter> args)
     {
@@ -22,7 +24,7 @@
     }
     protected async void SetRowsPerPage(int rowPerPage)
     {
-        CurrentUser.State.Preferences.DashboardWidgets.FirstOrDefault(w=>w.WidgetType.Equals(WidgetType)).ItemsPerPage=rowPerPage;
+        CurrentUser.State.Preferences.DashboardWidgets.FirstOrDefault(w => w.WidgetType.Equals(WidgetType)).ItemsPerPage = rowPerPage;
         CurrentUser.State.SaveDashboardWidgets();
     }
 }
