--- a/BLAZAMGui/UI/Dashboard/Widgets/ChangedEntriesWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/ChangedEntriesWidget.razor
@@ -58,18 +58,28 @@
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        Task.Run(async () =>
 
+        CurrentUserDashboardWidgets.OnRefreshWidget += (Widget widget) =>
+         {
+        if (widget.WidgetType.Equals(WidgetType))
         {
-            var search = new ADSearch(Directory);
-            search.Fields.Changed = DateTime.Now.AddDays(-1);
-            changdEntries = (await search.SearchAsync<DirectoryEntryAdapter, IDirectoryEntryAdapter>()).Where(x => x.CanRead).ToList();
-            LoadingData = false;
-            await InvokeAsync(StateHasChanged);
+            _ = RefreshData();
 
-        });
+        }
 
+            };
 
+        _ = RefreshData();
+    }
+    async Task RefreshData()
+    {
+        LoadingData = true;
+        await InvokeAsync(StateHasChanged);
+        var search = new ADSearch(Directory);
+        search.Fields.Changed = DateTime.Now.AddDays(-1);
+        changdEntries = (await search.SearchAsync<DirectoryEntryAdapter, IDirectoryEntryAdapter>()).Where(x => x.CanRead).ToList();
+        LoadingData = false;
+        await InvokeAsync(StateHasChanged);
 
     }
     void RowClicked(DataGridRowClickEventArgs<IDirectoryEntryAdapter> args)
