--- a/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/ChangedPasswordsWidget.razor
@@ -26,7 +26,7 @@
         </TemplateColumn>
         <TemplateColumn Title="Password Changed">
             <CellTemplate>
-                    <MudText>@(((IADUser)context.Item).PasswordLastSet)</MudText>
+                <MudText>@(((IADUser)context.Item).PasswordLastSet)</MudText>
             </CellTemplate>
         </TemplateColumn>
 
@@ -47,9 +47,24 @@
     {
         await base.OnInitializedAsync();
 
-        Title = "Disabled Users";
+        CurrentUserDashboardWidgets.OnRefreshWidget += (Widget widget) =>
+       {
+           if (widget.WidgetType.Equals(WidgetType))
+           {
+               _ = RefreshData();
+
+           }
+
+       };
+        _ = RefreshData();
+    }
+    async Task RefreshData()
+    {
+        LoadingData = true;
+        await InvokeAsync(StateHasChanged);
         LockedUsers = await Directory.Users.FindChangedPasswordUsersAsync(false);
         LoadingData = false;
         await InvokeAsync(StateHasChanged);
+
     }
 }
