--- a/BLAZAMGui/UI/Dashboard/Widgets/FavoritesWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/FavoritesWidget.razor
@@ -48,7 +48,7 @@
     <MudProgressLinear Indeterminate=true />
 </MudOverlay>
 @code {
-    List<IDirectoryEntryAdapter> FavoriteEntries 
+    List<IDirectoryEntryAdapter> FavoriteEntries
     {
         get => CurrentUser.State.Cache.Get<List<IDirectoryEntryAdapter>>(this.GetType());
         set => CurrentUser.State.Cache.Set(this.GetType(), value);
@@ -56,23 +56,37 @@
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        await Task.Run(() =>
+        CurrentUserDashboardWidgets.OnRefreshWidget += (Widget widget) =>
         {
-            var favorites = new List<IDirectoryEntryAdapter>();
-            foreach (var entry in CurrentUser.State.Preferences.FavoriteEntries)
+            if (widget.WidgetType.Equals(WidgetType))
             {
-                IDirectoryEntryAdapter match = Directory.GetDirectoryEntryByDN(entry.DN);
-                if (match != null && match.CanRead)
-                {
-                    favorites.Add(match);
-                }
+                _ = RefreshData();
 
             }
-            FavoriteEntries = favorites;
-            LoadingData = false;
-            InvokeAsync(StateHasChanged);
 
-        });
+        };
+
+        _ = RefreshData();
+
+
+    }
+    async Task RefreshData()
+    {
+        LoadingData = true;
+        await InvokeAsync(StateHasChanged);
+        var favorites = new List<IDirectoryEntryAdapter>();
+        foreach (var entry in CurrentUser.State.Preferences.FavoriteEntries)
+        {
+            IDirectoryEntryAdapter match = Directory.GetDirectoryEntryByDN(entry.DN);
+            if (match != null && match.CanRead)
+            {
+                favorites.Add(match);
+            }
+
+        }
+        FavoriteEntries = favorites;
+        LoadingData = false;
+        await InvokeAsync(StateHasChanged);
 
     }
     void RowClicked(DataGridRowClickEventArgs<IDirectoryEntryAdapter> args)
@@ -82,7 +96,7 @@
             GoTo(args.Item);
         }
     }
-  
+
     void GoTo(IDirectoryEntryAdapter args)
     {
         Nav.NavigateTo(args.SearchUri);
