--- a/BLAZAMGui/UI/Dashboard/Widgets/NewPrintersWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/NewPrintersWidget.razor
@@ -17,9 +17,27 @@
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
+        CurrentUserDashboardWidgets.OnRefreshWidget += (Widget widget) =>
+        {
+            if (widget.WidgetType.Equals(WidgetType))
+            {
+                _ = RefreshData();
+
+            }
+
+        };
+
+        _ = RefreshData();
+    }
+    async Task RefreshData()
+    {
+        LoadingData = true;
+        await InvokeAsync(StateHasChanged);
         NewPrinters = (await Directory.Printers.FindNewPrintersAsync(14, false)).Where(u => u.CanRead).ToList();
+
         LoadingData = false;
         await InvokeAsync(StateHasChanged);
+
     }
     void GoTo(DataGridRowClickEventArgs<IADPrinter> args)
     {
